--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
+    "dotenv-webpack": "^8.0.1",
     "node-sass": "^9.0.0"
   },
   "devDependencies": {
